--- a/style.css
+++ b/style.css
@@ -25,6 +25,9 @@ body {
 .header_right {
   float: right;
 }
+.shopping_list {
+  display: block
+}
 ul li {
   display: inline;
 }
@@ -33,17 +36,3 @@ ul li {
   display: block;
   margin-left: 55px;
 }
-/*h1 {
-  display: inline-block;
-  font-family: 'Yellowtail', cursive;
-  font-size: 30px;
-  margin-left: 5px;
-}
-p {
-  font-size: 10px;
-  font-family: 'Abel', sans-serif;
-  display: inline;
-  color: #777;
-  margin-top: -17px;
-  margin-bottom: 9px;
-}*/
